k8s-manifests/applications/registry/deployment.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2025-03-21T16:22:39Z"
    generation: 1
    name: registry
    namespace: registry
    resourceVersion: "413434"
    uid: 4d3ee916-bc6b-4540-a7ed-f8c42a3e565d
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: registry
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: registry
      spec:
        containers:
        - image: registry:2
          imagePullPolicy: IfNotPresent
          name: registry
          ports:
          - containerPort: 5000
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-03-21T16:22:40Z"
      lastUpdateTime: "2025-03-21T16:22:40Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-03-21T16:22:39Z"
      lastUpdateTime: "2025-03-21T16:22:40Z"
      message: ReplicaSet "registry-89bd8cdd6" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    creationTimestamp: "2025-03-21T16:23:01Z"
    generation: 1
    name: registry-ui
    namespace: registry
    resourceVersion: "413577"
    uid: 5f46c723-91ce-4bc6-ac72-700c2232808a
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: registry-ui
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: registry-ui
      spec:
        containers:
        - env:
          - name: REGISTRY_HOST
            value: registry.gonella.co.uk
          - name: REGISTRY_SSL
            value: "true"
          - name: REGISTRY_ONLY_ADMIN
            value: "false"
          image: jc21/registry-ui
          imagePullPolicy: Always
          name: registry-ui
          ports:
          - containerPort: 80
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2025-03-21T16:23:09Z"
      lastUpdateTime: "2025-03-21T16:23:09Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2025-03-21T16:23:01Z"
      lastUpdateTime: "2025-03-21T16:23:09Z"
      message: ReplicaSet "registry-ui-549f9c6fb9" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
